test/functions/ferguson/query/query-generic-star-tuple-error.good
query-generic-star-tuple-error.chpl:19: error: unresolved call 'f((Wrapper(int(64)),Wrapper(GenericClass(int(64)))))'
query-generic-star-tuple-error.chpl:12: note: candidates are: f(x: 2*Wrapper)
query-generic-star-tuple-error.chpl:9: note:                 Wrapper.f
